fix: Make interactives work on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -100,6 +100,6 @@
 		@apply relative;
 	}
 	.hoverline::after {
-		@apply absolute -bottom-2 left-1/2 h-0.5 w-0 -translate-x-1/2 bg-white duration-200 content-[''] hover:w-full;
+		@apply absolute -bottom-2 left-1/2 h-0.5 w-0 -translate-x-1/2 bg-white duration-200 content-[''] hover:w-full active:w-full;
 	}
 }
